--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,15 @@ nav li a{
   margin-bottom: 10px;
   color: var(--primaryColor);
 }
+.footer .social-media img{
+  width: 25px;
+}
+.footer .social-media div{
+  padding: 10px;
+  background-color: rgba(128, 128, 128, 0.185);
+  margin: 15px;
+  border-radius: 5px;
+}
+.footer .attribution {
+  border-top: thin solid rgba(128, 128, 128, 0.185);
+}
