--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ nav li a{
 }
 .question-box{
   padding: 20px;
-  background-color: grey;
+  background-color: var(--backgroundColor);
   margin-bottom: 10px;
   color: var(--primaryColor);
 }
