--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,18 @@ nav li a{
 .roadmap .left{
   margin-top: -3%;
 }
+.team .box h2{
+  transition: color 0.3s;
+}
+.team .box:hover h2{
+  color: var(--secondaryColor1);
+}
+.team .box img{
+  transition: transform 0.3s;
+}
+.team .box:hover img{
+  transform: scale(1.1);
+}
 .question-box{
   padding: 20px;
   background-color: var(--backgroundColor);
